# imageio

./: .gitignore  CMakeLists.txt  CcpMetadata.cpp  HostBitmap.cpp  ImageIO.ccpproj  ImageIO.vcxproj  ImageIO.vcxproj.filters  ImageIOResult.cpp  ImageIO_v141.vcxproj  ImageUtility.cpp  NanoVdbSupport.cpp  PsdHandler.cpp  RegenerateProjectFile.cmd  RegenerateXCodeProjFile.command  StdAfx.h  Tr2BmpHandler.cpp  Tr2DdsHandler.cpp  Tr2ImageHandler.cpp  Tr2JpgHandler.cpp  Tr2PngHandler.cpp  Tr2TgaHandler.cpp  VtaHandler.cpp  uses_ImageIO.yaml  vcpkg-configuration.json  vcpkg.json
.teamcity/MacOS/: Project.kt
.teamcity/Windows/: Project.kt
.teamcity/_Self.kt/: Project.kt
.teamcity/_Self.kt/buildTypes/: PublishToPerforce.kt
ImageIO.xcodeproj/: project.pbxproj
cmake/: carbon-imageioConfig.cmake.in
include/: BitmapDimensions.h  CcpMetadata.h  CubemapFace.h  HostBitmap.h  ImageIOResult.h  ImageUtility.h  NanoVdbSupport.h  PixelFormat.h  PsdHandler.h  TextureType.h  Tr2BmpHandler.h  Tr2DdsHandler.h  Tr2ImageHandler.h  Tr2JpgHandler.h  Tr2PngHandler.h  Tr2TgaHandler.h  VtaHandler.h
tests/: CMakeLists.txt  ImageIOTest.ccpproj  ImageIOTest.cpp  ImageIOTest.sln  ImageIOTest.vcxproj  ImageIOTest.vcxproj.filters  ImageIOTest_v141.vcxproj  MemoryStream.cpp  MemoryStream.h  RegenerateProjectFile.cmd  StdAfx.h  TestBmpHandler.cpp  TestDdsHandler.cpp  TestHelpers.cpp  TestHelpers.h  TestHostBitmap.cpp  TestImageHandler.cpp  TestJpgHandler.cpp  TestPngHandler.cpp  TestPsdHandler.cpp  TestTgaHandler.cpp  compileImages.py
tests/ImageIOTest.xcodeproj/: project.pbxproj
tests/resources/: a.dds  al.dds  al.psd  bc1.dds  bc3.dds  l.dds  r.psd  r.tga  rgb.dds  rgb.psd  rgb.tga  rgbCube.dds  rgbIndexed.tga  rgbRle.psd  rgbRle.tga  rgba.dds  rgba.psd  rgba.tga  rgba16.dds  rgba16f.dds  rgbaCube.dds  rgbaMips.dds  rgbaRle.tga  rgbaVolume.dds  rgbx.dds
tests/resourcesInclude/: _all.h
